Cambio de titulo

--- a/Second-Repository/blogpost.html
+++ b/Second-Repository/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog
+               Este es el cambio de titulo
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
